# bloom

./: .gitignore  PLAN.md  PROJECT_STRUCTURE.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.agent/rules/: frontend.md
.github/workflows/: release.yml
public/: manifest.json
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  FloatingQuickCapture.tsx
src/components/ai/: AIChatButton.tsx  AIChatPanel.tsx  AISettings.tsx
src/components/calendar/: DailyCalendar.tsx  DailyPlanner.tsx  DailyReview.tsx  DebugWrapper.tsx  ErrorBoundary.tsx  MonthlyCalendar.tsx  TargetCard.tsx  TestPlanner.tsx  TimeBlockItem.tsx
src/components/command/: CommandPalette.tsx  QuickCaptureModal.tsx
src/components/editor/: BlockNoteEditor.tsx  MarkdownEditor.tsx  WikilinkInline.tsx  (+5 more)
src/hooks/: useAIChat.ts  useAIWriter.ts  useActiveTimeBlock.ts  useAuth.tsx  useAutoLink.ts  useAutoTag.ts  useAutoUpdate.ts  useDialogs.ts  useEmbeddingSync.ts  useExport.ts  useGlobalShortcuts.ts  useGraphData.ts  useGraphInteractions.ts  useImport.ts  useLinks.ts  useNotes.ts  usePlanning.ts  usePreferences.tsx  useProfile.ts  useSemanticSearch.ts  useStorageStats.ts  useTags.ts  useTheme.tsx  useViewNavigation.ts  useWidgetWindow.ts  useWritingStats.ts
src/i18n/: index.ts
src/lib/: graphInteractions.ts  preventWebBehaviors.ts
src/pages/: Index.tsx  NoteWindow.tsx  QuickCapturePage.tsx  Welcome.tsx  WidgetPage.tsx
(+62 files in other folders)
